--- a/index.html
+++ b/index.html
@@ -3,11 +3,20 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
+    <script src="https://cdn.jsdelivr.net/npm/@popperjs/core@2.11.8/dist/umd/popper.min.js" integrity="sha384-I7E8VVD/ismYTF4hNIPjVp/Zjvgyol6VFvRkX/vR+Vc4jQkC+hVqc2pM8ODewa9r" crossorigin="anonymous"></script>
+    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.7/dist/js/bootstrap.min.js" integrity="sha384-7qAoOXltbVP82dhxHAUje59V5r2YsVfBafyUDxEdApLPmcdhBPg1DKg1ERo0BZlK" crossorigin="anonymous"></script>
+
+    <title>Search Country</title>
 </head>
 <body>
-    <input type="text" placeholder="Enter Country" id="SearchCountry">
-    <input type="button" value="Search" id="btnSearch">
+   
+ <input type="text" placeholder="Enter Country" id="SearchCountry">
+    <input type="button" value="Search" onclick="search()">
+  <div id="root">
+    <h1></h1>
+    <h2></h2>
+    <img src="">
+  </div>
 
 
     <script src="app.js"></script>
